package com.ffhs.referencease.entities;

import com.ffhs.referencease.converters.jpa.UUIDConverter;
import jakarta.persistence.Column;
import jakarta.persistence.Convert;
import jakarta.persistence.Entity;
import jakarta.persistence.GeneratedValue;
import jakarta.persistence.Id;
import jakarta.persistence.Table;
import java.io.Serial;
import java.io.Serializable;
import java.util.UUID;
import lombok.Data;

@Entity
@Data
@Table(name = "Position")
public class Position implements Serializable {

  @Serial
  private static final long serialVersionUID = 1L;

  @Id
  //  @GeneratedValue(strategy = GenerationType.AUTO)
  @GeneratedValue
  @Convert(converter = UUIDConverter.class)
  private UUID positionId;

  @Column(unique = true)
  private String positionName;

  @Override
  public String toString() {
    return positionName;
  }
}
